# DigitalWhiteboard

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties  local.properties  makeWrapPerspectivePt.py  settings.gradle
app/: CMakeLists.txt  build.gradle
app/libs/: pytorch_android_torchvision-release.aar
app/src/androidTest/java/com/example/digitalwhiteboard/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CaptureService.cpp  binarization.hpp  captureActivity.cpp  captureActivity.hpp  changeDetector.hpp  cornerDetrctor.cpp  cornerDetrctor.hpp  native-lib.cpp  opencvUtils.cpp  opencvUtils.h  perspectiveTransformer.hpp  segmentator.cpp  segmentator.hpp
app/src/main/java/com/example/digitalwhiteboard/: Corner.kt  CornerActivity.kt  DrawActivity.kt  MainActivity.kt  PrefStorage.kt  SettingActivity.kt  captureActivity.kt  cornerDetrctor.kt
app/src/main/res/layout/: activity_corner.xml  activity_draw.xml  activity_main.xml  activity_setting.xml
app/src/main/res/layout-land/: activity_corner.xml  activity_draw.xml  activity_main.xml  activity_setting.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/digitalwhiteboard/: CornerTest.kt  ExampleUnitTest.kt  PrefStorageTest.kt
gradle/wrapper/: gradle-wrapper.properties
python/: CaptureService.py  binarization.py  changeDetector.py  cornerDetector.py  main.py  perspectiveTransformer.py  segmentator.py
